src/objects/ACCL__Substitution__c.object
<CustomObject>
    <description>The use case holds the details of the substitute object used to to specify the basis of a substitution based on a substitution period and user.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the customer.</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Customer and the Substitution must have the same Sales Org.</errorMessage>
            <filterItems>
                <field>Account.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>$Source.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Substitutions</relationshipLabel>
        <relationshipName>Substitutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active flag</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Follow_Up_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Follow up time (number of days) of the substitution.</description>
        <label>Follow Up Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Lead_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lead time (number of days) of the substitution.</description>
        <label>Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the substitution belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Substitute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the substitute user.</description>
        <label>Substitute</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Substitutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Substituted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the user who the substitution is planned for.</description>
        <label>Substituted</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Substitutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Substitution_Type__c</fullName>
        <label>Substitution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vacation</fullName>
                    <default>true</default>
                    <label>Vacation</label>
                </value>
                <value>
                    <fullName>Sickness</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Substitution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the substitution with which the substitution item record is related.</description>
        <label>Substitution</label>
        <referenceTo>ACCL__Substitution__c</referenceTo>
        <relationshipLabel>Substitution Customers</relationshipLabel>
        <relationshipName>Substitutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>First date of validity period of the customer substitution.</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2999,12,31)</defaultValue>
        <description>Last date of validity period of the customer substitution</description>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <label>Substitution</label>
    <listViews>
        <fullName>Substitution_Customers</fullName>
        <columns>ACCL__Record_Link__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Substitute__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Substitution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Substitution__c.ACCL__Substitution_Customer</value>
        </filters>
        <label>Substitution Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Substitutions</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Substituted__c</columns>
        <columns>ACCL__Substitution_Type__c</columns>
        <columns>ACCL__Lead_Time__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Follow_Up_Time__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Substitution__c.ACCL__Substitution</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Substitution__c.ACCL__Substitution_Read_Only</value>
        </filters>
        <label>Substitutions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Substitution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substitutions</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Substitution</fullName>
        <active>true</active>
        <description>Technically used to specify if the record is either &apos;Substitution&apos; or &apos;Substitution Item</description>
        <label>Substitution</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Substitution_Customer</fullName>
        <active>true</active>
        <label>Substitution Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Substitution_Read_Only</fullName>
        <active>true</active>
        <label>Substitution_Read_Only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Do_not_substitute_yourself</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ACCL__Substitution__r.ACCL__Substituted__c=ACCL__Substitute__c, RecordType.DeveloperName = &apos;Substitution_Customer&apos;)</errorConditionFormula>
        <errorDisplayField>ACCL__Substitute__c</errorDisplayField>
        <errorMessage>The Substituted and the Substitute can&apos;t be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Follow_up_Time</fullName>
        <active>true</active>
        <description>The Follow Up Time must be a number equal or greater than 0.</description>
        <errorConditionFormula>AND(ACCL__Follow_Up_Time__c &lt; 0)</errorConditionFormula>
        <errorMessage>The Follow Up Time must be a number equal or greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Lead_Time</fullName>
        <active>true</active>
        <description>The Lead Time must be a number equal or greater than 0.</description>
        <errorConditionFormula>AND(ACCL__Lead_Time__c &lt; 0)</errorConditionFormula>
        <errorMessage>The Lead Time must be a number equal or greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_from_and_valid_thru</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>NOT(
    OR(
        AND(ISBLANK(ACCL__Valid_From__c),ISBLANK(ACCL__Valid_Thru__c)),
        AND(NOT ISBLANK(ACCL__Valid_From__c),NOT ISBLANK(ACCL__Valid_Thru__c),(ACCL__Valid_From__c &lt;= ACCL__Valid_Thru__c))
       )
    )</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>